--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  line-height: 1;
+  padding-bottom: 15px;
 }
 
 textarea {
@@ -12,16 +14,31 @@ textarea {
   padding: 10px;
 }
 
+
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
+  margin-top: 5px;
+}
+
 .description {
   white-space: pre-wrap;
 }
 
 .time-block {
+  text-align: center;
   border-radius: 15px;
 }
 
 .row {
+  margin-right: 150px;
+  white-space: pre-wrap;
+  height: 100px;
   border-top: 1px solid white;
+  ;
 }
 
 .hour {
@@ -49,11 +66,13 @@ textarea {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
-  background-color: #06aed5;
+  background-color: #06AED5;
+  cursor: pointer;
+  outline: none;
   color: white;
 }
 
 .saveBtn i:hover {
   font-size: 20px;
-  transition: all 0.3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
